--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -6577,7 +6577,7 @@ options</property>
 	  <child>
 	    <widget class="GtkLabel" id="label143">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Use this window for adding until 10 persons.
+	      <property name="label" translatable="yes">Use this window to add until 10 people.
 If you need more, just repeat the operation later.</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
